# querysort

./: .gitattributes  .gitignore  CHANGELOG  CONTRIBUTORS  INSTALL  LICENSE  Makefile.am  README  README.md  TODO  autogen.sh  configure.ac  makefile
man/: Makefile.am  makefile  querysort.1  querysort.1.rst  querysort.3  querysort.3.rst
man/man1/: querysort.1
man/man3/: querysort.3
rpm/: querysort-i386.spec  querysort.spec
src/: Makefile.am  makefile  private.h  querysort.c  querysort.h  querysort_main.c
test/: Makefile  Makefile.am  check_querysort.c
